Started transitioning the simple key to live at "/"; redid header links.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@972 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -19,10 +19,16 @@
                     </form>
                 </div>
                 <ul>
-                    <li class="home"><a href="/simple/">Home</a></li>
-                    <li class="plant-id"><a href="/simple/1/">Plant Identifier</a></li>
-                    <li class="my-plants"><a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a></li>
-                    <li class="advanced-id"><a href="/simple/advanced/">Advanced ID Tools</a></li>
+                  <li class="home">
+                    <a href="{% url simplekey-index %}">Home</a>
+                  </li>
+                  <li class="plant-id">
+                    <a href="{% url simplekey-page 1 %}">Plant Identifier</a>
+                  </li>
+                  <li class="my-plants"><a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a></li>
+                  <li class="advanced-id">
+                    <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
+                  </li>
                     <li class="teaching-tools"><a href="#">Teaching Tools</a></li>
                     <li class="about last"><a href="#">About</a></li>
                 </ul>
