--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -11,14 +11,34 @@
                 <div id="main">
                     <div id="breadcrumb">
                         <ul>
-                            <li class="first completed"><a href="/simple/help/start/"><img
-                                src="/static/images/icons/start.png" alt="Get Started"> Get Started</a></li>
-                            <li class="second completed"><a href="/simple/"><img
-                                src="/static/images/icons/group.png" alt="Choose Group"> Choose Group</a></li>
-                            <li class="third completed"><a href="/simple/{{ pilegroup.name|slugify }}/"><img
-                                src="/static/images/icons/group.png" alt="Group"> {{ pilegroup.name }}</a></li>
-                            <li class="last current"><a><img
-                                src="/static/images/icons/subgroup.png" alt="Subgroup"> {{ pile.name }}</a></li>
+                            <li class="first completed">
+                              <a href="{% url simplekey-help-start %}">
+                                <img src="/static/images/icons/start.png"
+                                     alt="Get Started">
+                                Get Started
+                              </a>
+                            </li>
+                            <li class="second completed">
+                              <a href="{% url simplekey-page 1 %}">
+                                <img src="/static/images/icons/group.png"
+                                     alt="Choose Group">
+                                Choose Group
+                              </a>
+                            </li>
+                            <li class="third completed">
+                              <a href="{% url simplekey-pilegroup pilegroup.slug %}">
+                                <img src="/static/images/icons/group.png"
+                                     alt="Group">
+                                {{ pilegroup.name }}
+                              </a>
+                            </li>
+                            <li class="last current">
+                              <a>
+                                <img src="/static/images/icons/subgroup.png"
+                                     alt="Subgroup">
+                                {{ pile.name }}
+                              </a>
+                            </li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
 
@@ -107,7 +127,8 @@
 
                     <div class="section">
                         <h5 class="left help">Need Help?</h5>
-                        <a href="/simple/help/" class="get-help-btn left">Get Help</a>
+                        <a href="{% url simplekey-help-about %}"
+                           class="get-help-btn left">Get Help</a>
                         <div class="clearit"></div>
                     </div><!--Closes .section-->
                 </div><!--Closes #sidebar-->
