--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -145,6 +145,10 @@
         {% include "simplekey/_footer.html" %}
 
         <script>
+            API_URL = '{% url api-base %}';
+            SEARCH_URL = '{% url simplekey-search %}';
+            SUGGEST_URL = '{% url simplekey-search-suggest %}';
+
             {% include "simplekey/partner_site_inline_js.html" %}
             dojo.require('gobotany.sk.results');
             dojo.addOnLoad(function() {
@@ -154,4 +158,3 @@
         </script>
     </body>
 {% endblock %}
-
