Collapsed glossary functions into a single Dojo module; fixed glossary page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@984 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -42,6 +42,7 @@ Glossary: {{ this_letter|upper }}
 {% block js_bottom %}
 <script type="text/javascript">
 dojo.require('gobotany.sk.glossary');
+API_URL = '{% url api-base %}';
 dojo.addOnLoad(function() {
     glossary_helper = gobotany.sk.glossary.GlossaryHelper();
     glossary_helper.setup();
