--- a/gobotany/simplekey/templates/simplekey/_old_base.html
+++ b/gobotany/simplekey/templates/simplekey/_old_base.html
@@ -18,7 +18,7 @@
       <div id="navlinks">
         <p>Home | Plant of the Day |
             {% ifnotequal request.path "/simple/" %}
-                <a href="/simple/">Plant Identifier</a>
+                <a href="{% url simplekey-page 1 %}">Plant Identifier</a>
             {% else %}
                 <a class="current">Plant Identifier</a>
             {% endifnotequal %}
