--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -35,22 +35,23 @@
       <p>{% if item.description %}
              {{ item.description }}
          {% else %}
-             This is a placeholder description. (Test glossary highlighting with
-             the term monomorphic here.)
+             This is a placeholder description.
+             (Test glossary highlighting with the term isophyllous here.)
          {% endif %}</p>
 
       <h3>Genera</h3>
       <ul class="Genera">
         {% for genus in item.genera.all %}
-        <li><em><a href="../../genera/{{ genus.slug }}/">{{ genus.name }}</a></em></li>
+        <li><em><a href="{% url simplekey-genus genus.slug %}"
+                   >{{ genus.name }}</a></em></li>
         {% endfor %}
       </ul>
 
       <h3>Species</h3>
       <ul class="Species">
         {% for species in item.taxa.all %}
-        <li><a href="/simple/species/{{ species.scientific_name|split:' '|at_index:'0'|lower }}/{{ species.scientific_name|split:' '|at_index:'1'|lower }}/"><em>{{ species.scientific_name }}</em></a></li>
-        
+        <li><a href="{% url simplekey-species species.genus.slug species.epithet %}"
+               ><em>{{ species.scientific_name }}</em></a></li>
         {% endfor %}
       </ul>
     </div>
@@ -88,6 +89,7 @@
 
 {% block js_bottom %}
   <script>
+      API_URL = '{% url api-base %}';
       dojo.require('gobotany.sk.family');
       dojo.addOnLoad(function() {
           gobotany.sk.family.init('{{ item.slug }}');
