Correct a link destination from the help/start page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@991 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -18,7 +18,7 @@ Getting Started
     {% endif %}
 </div>
 <p id="next">
-    <a href="/simple/1/">Onward: to Plant Identification</a>
+    <a href="/1/">Onward: to Plant Identification</a>
 </p>
 {% endblock %}
 
