Fix broken search suggest on home and pile ID pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1024 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -62,5 +62,7 @@
         </div><!--Closes .content-->
 
         {% include "simplekey/_footer.html" %}
+        
+        {% include "simplekey/_script_constants.html" %}
     </body>
 {% endblock %}
