--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -109,6 +109,8 @@
 
         {% include "simplekey/_footer.html" %}
 
+        {% include "simplekey/_script_constants.html" %}
+
         <script>
             {% include "simplekey/partner_site_inline_js.html" %}
         </script>
