--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -122,7 +122,9 @@
         </div><!--Closes .content-->
 
         {% include "simplekey/_footer.html" %}
-        
+
+        {% include "simplekey/_script_constants.html" %}
+
         <script>
             {% include "simplekey/partner_site_inline_js.html" %}
         </script>
