Change 'Go Back' button href to a proper link on pile ID page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1026 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -39,7 +39,7 @@
                             <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
                         {% else %}
                             <a class="back-level"
-                                href="javascript:history.back(1)">Go back one level</a>
+                                href="{% url simplekey-page page.number|add:"-1" %}">Go back one level</a>
                         {% endif %}
                     </div><!--Closes .not-my-plant-->
 
@@ -103,7 +103,7 @@
                             <a href="{{ page.next_page.get_absolute_url }}">Show me other groups</a>
                         {% else %}
                             <a class="back-level"
-                                href="javascript:history.back(1)">Go back one level</a>
+                                href="{% url simplekey-page page.number|add:"-1" %}">Go back one level</a>
                         {% endif %}
                     </div><!--Closes .not-my-plant-->
 
