--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -11,18 +11,15 @@
                 <div id="main">
                     <div id="breadcrumb">
                         <ul>
-                            <li class="first completed"><a href="../help/start/"><img src="/static/images/icons/start.png" alt="Get Started"> Get Started</a></li>
-                            <li class="second completed"><a href="javascript:history.back(1)"><img src="/static/images/icons/group.png" alt="Choose Group"> Choose Group</a></li>
-                            <li class="third current"><a><img src="/static/images/icons/group.png" alt="Group">{{ pilegroup.name }}</a></li>
-                            <li class="last upcoming"><a><img src="/static/images/icons/subgroup.png" alt="Subgroup"> Subgroup</a></li>
+                            <li class="first completed"><a href="{% url simplekey-page 1 %}"><img
+                                src="/static/images/icons/start.png" alt=""> Start</a></li>
+                            <li class="second current"><a><img
+                                src="/static/images/icons/group.png" alt=""> {{ pilegroup.name }}</a></li>
+                            <li class="third upcoming"><a><img 
+                                src="/static/images/icons/subgroup.png" alt=""> Subgroup</a></li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
 
-                    <div id="breadcrumb-nav">
-                        <p><a href="{% url simplekey-page 1 %}">Start</a> &gt;
-                        {{ pilegroup.name }}</p>
-                    </div>
-                    
                     <div class="not-my-plant">
                         <h6>My plant isn't in
                             {% if piles_and_urls|length > 1 %}
