--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -11,42 +11,15 @@
                 <div id="main">
                     <div id="breadcrumb">
                         <ul>
-                            <li class="first completed">
-                              <a href="{% url simplekey-help-start %}">
-                                <img src="/static/images/icons/start.png"
-                                     alt="Get Started">
-                                Get Started
-                              </a>
-                            </li>
-                            <li class="second completed">
-                              <a href="{% url simplekey-page 1 %}">
-                                <img src="/static/images/icons/group.png"
-                                     alt="Choose Group">
-                                Choose Group
-                              </a>
-                            </li>
-                            <li class="third completed">
-                              <a href="{% url simplekey-pilegroup pilegroup.slug %}">
-                                <img src="/static/images/icons/group.png"
-                                     alt="Group">
-                                {{ pilegroup.name }}
-                              </a>
-                            </li>
-                            <li class="last current">
-                              <a>
-                                <img src="/static/images/icons/subgroup.png"
-                                     alt="Subgroup">
-                                {{ pile.name }}
-                              </a>
-                            </li>
+                            <li class="first completed"><a href="{% url simplekey-page 1 %}"><img
+                                src="/static/images/icons/start.png" alt=""> Start</a></li>
+                            <li class="second completed"><a
+                                href="{% url simplekey-pilegroup pilegroup.slug %}"><img
+                                src="/static/images/icons/group.png" alt=""> {{ pilegroup.name }}</a></li>
+                            <li class="third current"><a><img
+                                src="/static/images/icons/subgroup.png" alt=""> {{ pile.name }}</a></li>
                         </ul>
                     </div><!--Closes #breadcrumb-->
-                    
-                    <div id="breadcrumb-nav">
-                        <p><a href="{% url simplekey-page 1 %}">Start</a> &gt;
-                        <a href="{% url simplekey-pilegroup pilegroup.slug %}">{{ pilegroup.name }}</a> &gt;
-                        {{ pile.name }}</p>
-                    </div>
 
                     <h2>Plant Identifier</h2>
                         <h3>{{ pile.name }} (<span class="species-count">calculating</span> matching species)</h3>
