--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,8 +1,8 @@
     <header>
         <div class="container">
             <!--Branding-->
-            <h2><a href="#">New England Wild Flower Society</a></h2>
-            <h1><a href="index.php">Go Botany features thousands of native
+            <h2><a href="/">New England Wild Flower Society</a></h2>
+            <h1><a href="/">Go Botany features thousands of native
                 New England plants for you to learn and explore</a></h1>
 
             <!--Navigation-->
