Restore the dashed underline to glossary-popup terms, missing from character values since the visual design was added.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1072 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1090,3 +1090,9 @@ div.working-area #simple-slider .dijitSliderDecoration {
 div.working-area #simple-slider .count {
     position: absolute; /* top/left set by JS */
 }
+/* end overrides for count slider */
+
+/* glossary term underline for popup */
+.gloss {
+    border-bottom: 1px dashed #000;
+}
