Style multiple choice filter values so they are arranged in rows, with images next to buttons and text wrapping, as shown in the visual design.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1075 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -47,7 +47,9 @@
 
                                         <div class="values"></div>
 
-                                        <button name="apply" type="button">Apply</button>
+                                        <div class="actions">
+                                            <a class="apply-btn" href="#">Apply</a>
+                                        </div>
 
                                     </div>
                                 </div>
